test/autotests/inspect/parse-error/input.js
const thing = { ...stuff };
require('foo');

if (require('bar')) {
    require('baz');
}
